[gd_scene load_steps=13 format=3 uid="uid://d17hwy11dpoda"]

[ext_resource type="PackedScene" uid="uid://bsh7ureox63f8" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://dgj6of5u0iqqb" path="res://main.gd" id="1_lquwl"]
[ext_resource type="PackedScene" uid="uid://dlsfwyuv36bt8" path="res://the_ball.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://8taod8yivu0q" path="res://brick.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://c0xhvnbk2g7o1" path="res://red-brick.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dnjwv43p2ka02" path="res://green_brick.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://bn1tmblpujk2u" path="res://score_popup.tscn" id="7_5vw27"]
[ext_resource type="PackedScene" uid="uid://ccvbnv6hejo8g" path="res://hud.tscn" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://blb36mb5lourp" path="res://life_icon.tscn" id="8_kek77"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7dm0k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kek77"]
size = Vector2(1164, 20)

[node name="Main" type="Node"]
script = ExtResource("1_lquwl")
baseBrick = ExtResource("3_h2yge")
layer1Brick = ExtResource("4_1bvp3")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Walls" type="Node" parent="."]

[node name="Top" type="StaticBody2D" parent="Walls"]
position = Vector2(576, 10)
scale = Vector2(57.6, 1)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Walls/Top"]
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_7dm0k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Top"]
visible = false
shape = SubResource("RectangleShape2D_ig7tw")

[node name="Left" type="StaticBody2D" parent="Walls"]
position = Vector2(10, 329)
rotation = 1.5708
scale = Vector2(32, 1)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Walls/Left"]
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_7dm0k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
visible = false
shape = SubResource("RectangleShape2D_ig7tw")

[node name="Right" type="StaticBody2D" parent="Walls"]
position = Vector2(1142, 329)
rotation = 1.5708
scale = Vector2(32, 1)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Walls/Right"]
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_7dm0k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
visible = false
shape = SubResource("RectangleShape2D_ig7tw")

[node name="PlayerStartPos" type="Marker2D" parent="."]
position = Vector2(576, 620)

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(576, 620)

[node name="The Ball" parent="." instance=ExtResource("2_0xm2m")]
position = Vector2(575, 520)
bounce_randomness = 50.0

[node name="DeathZone" type="StaticBody2D" parent="." groups=["death"]]
position = Vector2(0, 665)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone" groups=["death"]]
position = Vector2(572, 0)
shape = SubResource("RectangleShape2D_kek77")

[node name="HUD" parent="." instance=ExtResource("7_272bh")]
popup = ExtResource("7_5vw27")
lifeIcon = ExtResource("8_kek77")

[node name="TemplateBrickContainer" type="Node" parent="."]

[node name="BaseBrick" parent="TemplateBrickContainer" instance=ExtResource("3_h2yge")]
position = Vector2(-332, -129)

[node name="RedBrick" parent="TemplateBrickContainer" instance=ExtResource("4_1bvp3")]
position = Vector2(-282, -129)

[node name="GreenBrick" parent="TemplateBrickContainer" instance=ExtResource("6_7mycd")]
position = Vector2(-234, -129)

[node name="BaseBrick" parent="." instance=ExtResource("3_h2yge")]
position = Vector2(411, 324)

[node name="RedBrick" parent="." instance=ExtResource("4_1bvp3")]
position = Vector2(464, 323)

[node name="GreenBrick" parent="." instance=ExtResource("6_7mycd")]
position = Vector2(512, 323)

[node name="GreenBrick2" parent="." instance=ExtResource("6_7mycd")]
position = Vector2(560, 323)

[node name="GreenBrick3" parent="." instance=ExtResource("6_7mycd")]
position = Vector2(613, 323)

[node name="GreenBrick4" parent="." instance=ExtResource("6_7mycd")]
position = Vector2(659, 323)

[node name="GreenBrick5" parent="." instance=ExtResource("6_7mycd")]
position = Vector2(707, 321)

[node name="GreenBrick6" parent="." instance=ExtResource("6_7mycd")]
position = Vector2(762, 321)

[connection signal="resetPlay" from="." to="Player" method="reset"]
[connection signal="resetPlay" from="." to="The Ball" method="reset"]
[connection signal="updateLivesUI" from="." to="HUD" method="update_lives_container"]
[connection signal="updateScoreText" from="." to="HUD" method="update_score"]
[connection signal="ballRotation" from="Player" to="The Ball" method="rotateTheBall"]
[connection signal="gainLife" from="Player" to="." method="gainLife"]
[connection signal="launchTheBall" from="Player" to="The Ball" method="launch"]
[connection signal="loseLife" from="Player" to="." method="loseLife"]
[connection signal="playerPosition" from="Player" to="The Ball" method="followPaddle"]
[connection signal="ballDeath" from="The Ball" to="." method="ballDeath"]
[connection signal="popup" from="TemplateBrickContainer/BaseBrick" to="HUD" method="colour_popup"]
[connection signal="score" from="TemplateBrickContainer/BaseBrick" to="." method="handleScore"]
[connection signal="popup" from="TemplateBrickContainer/RedBrick" to="HUD" method="colour_popup"]
[connection signal="score" from="TemplateBrickContainer/RedBrick" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="TemplateBrickContainer/RedBrick" to="." method="spawnBrick"]
[connection signal="popup" from="TemplateBrickContainer/GreenBrick" to="HUD" method="colour_popup"]
[connection signal="score" from="TemplateBrickContainer/GreenBrick" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="TemplateBrickContainer/GreenBrick" to="." method="spawnBrick"]
[connection signal="popup" from="BaseBrick" to="HUD" method="colour_popup"]
[connection signal="score" from="BaseBrick" to="." method="handleScore"]
[connection signal="popup" from="RedBrick" to="HUD" method="colour_popup"]
[connection signal="score" from="RedBrick" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="RedBrick" to="." method="spawnBrick"]
[connection signal="popup" from="GreenBrick" to="HUD" method="colour_popup"]
[connection signal="score" from="GreenBrick" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="GreenBrick" to="." method="spawnBrick"]
[connection signal="popup" from="GreenBrick2" to="HUD" method="colour_popup"]
[connection signal="score" from="GreenBrick2" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="GreenBrick2" to="." method="spawnBrick"]
[connection signal="popup" from="GreenBrick3" to="HUD" method="colour_popup"]
[connection signal="score" from="GreenBrick3" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="GreenBrick3" to="." method="spawnBrick"]
[connection signal="popup" from="GreenBrick4" to="HUD" method="colour_popup"]
[connection signal="score" from="GreenBrick4" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="GreenBrick4" to="." method="spawnBrick"]
[connection signal="popup" from="GreenBrick5" to="HUD" method="colour_popup"]
[connection signal="score" from="GreenBrick5" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="GreenBrick5" to="." method="spawnBrick"]
[connection signal="popup" from="GreenBrick6" to="HUD" method="colour_popup"]
[connection signal="score" from="GreenBrick6" to="." method="handleScore"]
[connection signal="spawnBrickSignal" from="GreenBrick6" to="." method="spawnBrick"]
